# mandelbrot

./: .gitignore  CMakeLists.txt  flake.nix  mandelbrot.cpp  math.cpp  math.h  opengl-setup.cpp  opengl-setup.h  opengl-wrapper.h  opengl-wrapper.h.m4  vertex-array.cpp  vertex-array.h  vertex-buffer.cpp  vertex-buffer.h  vertex-layout.cpp  vertex-layout.h  vertex-vector-array.h
lib/gl/: CMakeLists.txt  colored-vertex.h  math.cpp  math.h  opengl-setup.cpp  opengl-setup.h  renderer-handler-window.cpp  renderer-handler-window.h  renderer.cpp  renderer.h  vertex-layout.h  vertex-vector-array.h
lib/gl-imgui/: CMakeLists.txt  gl-imgui.h  imgui-renderer.cpp
res/: basic.shader  enhanced-mandelbrot.glsl  mandelbrot-single-precision.glsl  mandelbrot.glsl  mandelbrot.shader
src/: CMakeLists.txt  mandelbrot-cpu-optimized-renderer.cpp  mandelbrot-cpu-optimized-renderer.h  mandelbrot-cpu-unoptimized-renderer.cpp  mandelbrot-cpu-unoptimized-renderer.h  mandelbrot-cpu-vectorized-renderer.cpp  mandelbrot-gpu-renderer.cpp  mandelbrot-gpu-renderer.h  mandelbrot-gpu-single-precision-renderer.cpp  mandelbrot-gpu-single-precision-renderer.h  mandelbrot-renderer.h  mandelbrot-shader-loader.h  mandelbrot.cpp
src/backends/: mandelbrot-cpu-optimized-renderer.cpp  mandelbrot-cpu-unoptimized-renderer.cpp  mandelbrot-cpu-unoptimized-renderer.h  mandelbrot-cpu-vectorized-renderer.cpp  mandelbrot-cpu-vectorized-renderer.h  mandelbrot-gpu-renderer.cpp  mandelbrot-gpu-renderer.h  mandelbrot-gpu-single-precision-renderer.cpp  mandelbrot-gpu-single-precision-renderer.h
